--- a/data_treatment/outlier_detect_treatment.ipynb
+++ b/data_treatment/outlier_detect_treatment.ipynb
@@ -596,7 +596,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "id": "8df2f832",
    "metadata": {},
    "outputs": [
@@ -646,7 +646,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "id": "ce179efb",
    "metadata": {},
    "outputs": [],
@@ -682,7 +682,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "id": "d886bddf",
    "metadata": {},
    "outputs": [
@@ -727,7 +727,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "id": "02448e7f",
    "metadata": {},
    "outputs": [],
@@ -768,7 +768,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 14,
    "id": "92e2e528",
    "metadata": {},
    "outputs": [
@@ -821,7 +821,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 15,
    "id": "bd709230",
    "metadata": {},
    "outputs": [
@@ -852,7 +852,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 16,
    "id": "a4ffe1be",
    "metadata": {},
    "outputs": [
@@ -918,7 +918,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 17,
    "id": "19bb952a",
    "metadata": {},
    "outputs": [
@@ -947,7 +947,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 18,
    "id": "1b62779a",
    "metadata": {},
    "outputs": [
@@ -1003,7 +1003,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 127,
+   "execution_count": 19,
    "id": "a6aea0ed",
    "metadata": {},
    "outputs": [
@@ -1042,7 +1042,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 128,
+   "execution_count": 20,
    "id": "652a0089",
    "metadata": {},
    "outputs": [
@@ -1121,6 +1121,357 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "8006e410",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>attr</th>\n",
+       "      <th>min</th>\n",
+       "      <th>max</th>\n",
+       "      <th>mean</th>\n",
+       "      <th>median</th>\n",
+       "      <th>std</th>\n",
+       "      <th>cv</th>\n",
+       "      <th>p1</th>\n",
+       "      <th>p5</th>\n",
+       "      <th>p25</th>\n",
+       "      <th>p75</th>\n",
+       "      <th>p95</th>\n",
+       "      <th>p99</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>CRIM</td>\n",
+       "      <td>0.00632</td>\n",
+       "      <td>88.9762</td>\n",
+       "      <td>3.613524</td>\n",
+       "      <td>0.25651</td>\n",
+       "      <td>8.593041</td>\n",
+       "      <td>2.378023</td>\n",
+       "      <td>0.01361</td>\n",
+       "      <td>0.027910</td>\n",
+       "      <td>0.082045</td>\n",
+       "      <td>3.677083</td>\n",
+       "      <td>15.78915</td>\n",
+       "      <td>41.37033</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>ZN</td>\n",
+       "      <td>0.00000</td>\n",
+       "      <td>100.0000</td>\n",
+       "      <td>11.363636</td>\n",
+       "      <td>0.00000</td>\n",
+       "      <td>23.299396</td>\n",
+       "      <td>2.050347</td>\n",
+       "      <td>0.00000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>12.500000</td>\n",
+       "      <td>80.00000</td>\n",
+       "      <td>90.00000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>INDUS</td>\n",
+       "      <td>0.46000</td>\n",
+       "      <td>27.7400</td>\n",
+       "      <td>11.136779</td>\n",
+       "      <td>9.69000</td>\n",
+       "      <td>6.853571</td>\n",
+       "      <td>0.615400</td>\n",
+       "      <td>1.25350</td>\n",
+       "      <td>2.180000</td>\n",
+       "      <td>5.190000</td>\n",
+       "      <td>18.100000</td>\n",
+       "      <td>21.89000</td>\n",
+       "      <td>25.65000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>CHAS</td>\n",
+       "      <td>0.00000</td>\n",
+       "      <td>1.0000</td>\n",
+       "      <td>0.069170</td>\n",
+       "      <td>0.00000</td>\n",
+       "      <td>0.253743</td>\n",
+       "      <td>3.668398</td>\n",
+       "      <td>0.00000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>1.00000</td>\n",
+       "      <td>1.00000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>NOX</td>\n",
+       "      <td>0.38500</td>\n",
+       "      <td>0.8710</td>\n",
+       "      <td>0.554695</td>\n",
+       "      <td>0.53800</td>\n",
+       "      <td>0.115763</td>\n",
+       "      <td>0.208697</td>\n",
+       "      <td>0.39800</td>\n",
+       "      <td>0.409250</td>\n",
+       "      <td>0.449000</td>\n",
+       "      <td>0.624000</td>\n",
+       "      <td>0.74000</td>\n",
+       "      <td>0.87100</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>RM</td>\n",
+       "      <td>3.56100</td>\n",
+       "      <td>8.7800</td>\n",
+       "      <td>6.284634</td>\n",
+       "      <td>6.20850</td>\n",
+       "      <td>0.701923</td>\n",
+       "      <td>0.111689</td>\n",
+       "      <td>4.52445</td>\n",
+       "      <td>5.314000</td>\n",
+       "      <td>5.885500</td>\n",
+       "      <td>6.623500</td>\n",
+       "      <td>7.58750</td>\n",
+       "      <td>8.33500</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>AGE</td>\n",
+       "      <td>2.90000</td>\n",
+       "      <td>100.0000</td>\n",
+       "      <td>68.574901</td>\n",
+       "      <td>77.50000</td>\n",
+       "      <td>28.121033</td>\n",
+       "      <td>0.410078</td>\n",
+       "      <td>6.61000</td>\n",
+       "      <td>17.725000</td>\n",
+       "      <td>45.025000</td>\n",
+       "      <td>94.075000</td>\n",
+       "      <td>100.00000</td>\n",
+       "      <td>100.00000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>DIS</td>\n",
+       "      <td>1.12960</td>\n",
+       "      <td>12.1265</td>\n",
+       "      <td>3.795043</td>\n",
+       "      <td>3.20745</td>\n",
+       "      <td>2.103628</td>\n",
+       "      <td>0.554310</td>\n",
+       "      <td>1.20654</td>\n",
+       "      <td>1.461975</td>\n",
+       "      <td>2.100175</td>\n",
+       "      <td>5.188425</td>\n",
+       "      <td>7.82780</td>\n",
+       "      <td>9.22277</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>RAD</td>\n",
+       "      <td>1.00000</td>\n",
+       "      <td>24.0000</td>\n",
+       "      <td>9.549407</td>\n",
+       "      <td>5.00000</td>\n",
+       "      <td>8.698651</td>\n",
+       "      <td>0.910910</td>\n",
+       "      <td>1.00000</td>\n",
+       "      <td>2.000000</td>\n",
+       "      <td>4.000000</td>\n",
+       "      <td>24.000000</td>\n",
+       "      <td>24.00000</td>\n",
+       "      <td>24.00000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>TAX</td>\n",
+       "      <td>187.00000</td>\n",
+       "      <td>711.0000</td>\n",
+       "      <td>408.237154</td>\n",
+       "      <td>330.00000</td>\n",
+       "      <td>168.370495</td>\n",
+       "      <td>0.412433</td>\n",
+       "      <td>188.00000</td>\n",
+       "      <td>222.000000</td>\n",
+       "      <td>279.000000</td>\n",
+       "      <td>666.000000</td>\n",
+       "      <td>666.00000</td>\n",
+       "      <td>666.00000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>PTRATIO</td>\n",
+       "      <td>12.60000</td>\n",
+       "      <td>22.0000</td>\n",
+       "      <td>18.455534</td>\n",
+       "      <td>19.05000</td>\n",
+       "      <td>2.162805</td>\n",
+       "      <td>0.117190</td>\n",
+       "      <td>13.00000</td>\n",
+       "      <td>14.700000</td>\n",
+       "      <td>17.400000</td>\n",
+       "      <td>20.200000</td>\n",
+       "      <td>21.00000</td>\n",
+       "      <td>21.20000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>B</td>\n",
+       "      <td>0.32000</td>\n",
+       "      <td>396.9000</td>\n",
+       "      <td>356.674032</td>\n",
+       "      <td>391.44000</td>\n",
+       "      <td>91.204607</td>\n",
+       "      <td>0.255709</td>\n",
+       "      <td>6.73000</td>\n",
+       "      <td>84.590000</td>\n",
+       "      <td>375.377500</td>\n",
+       "      <td>396.225000</td>\n",
+       "      <td>396.90000</td>\n",
+       "      <td>396.90000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12</th>\n",
+       "      <td>LSTAT</td>\n",
+       "      <td>1.73000</td>\n",
+       "      <td>37.9700</td>\n",
+       "      <td>12.653063</td>\n",
+       "      <td>11.36000</td>\n",
+       "      <td>7.134002</td>\n",
+       "      <td>0.563816</td>\n",
+       "      <td>2.88300</td>\n",
+       "      <td>3.707500</td>\n",
+       "      <td>6.950000</td>\n",
+       "      <td>16.955000</td>\n",
+       "      <td>26.80750</td>\n",
+       "      <td>33.91850</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13</th>\n",
+       "      <td>MEDV</td>\n",
+       "      <td>5.00000</td>\n",
+       "      <td>50.0000</td>\n",
+       "      <td>22.532806</td>\n",
+       "      <td>21.20000</td>\n",
+       "      <td>9.188012</td>\n",
+       "      <td>0.407762</td>\n",
+       "      <td>7.01000</td>\n",
+       "      <td>10.200000</td>\n",
+       "      <td>17.025000</td>\n",
+       "      <td>25.000000</td>\n",
+       "      <td>43.40000</td>\n",
+       "      <td>50.00000</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       attr        min       max        mean     median         std        cv  \\\n",
+       "0      CRIM    0.00632   88.9762    3.613524    0.25651    8.593041  2.378023   \n",
+       "1        ZN    0.00000  100.0000   11.363636    0.00000   23.299396  2.050347   \n",
+       "2     INDUS    0.46000   27.7400   11.136779    9.69000    6.853571  0.615400   \n",
+       "3      CHAS    0.00000    1.0000    0.069170    0.00000    0.253743  3.668398   \n",
+       "4       NOX    0.38500    0.8710    0.554695    0.53800    0.115763  0.208697   \n",
+       "5        RM    3.56100    8.7800    6.284634    6.20850    0.701923  0.111689   \n",
+       "6       AGE    2.90000  100.0000   68.574901   77.50000   28.121033  0.410078   \n",
+       "7       DIS    1.12960   12.1265    3.795043    3.20745    2.103628  0.554310   \n",
+       "8       RAD    1.00000   24.0000    9.549407    5.00000    8.698651  0.910910   \n",
+       "9       TAX  187.00000  711.0000  408.237154  330.00000  168.370495  0.412433   \n",
+       "10  PTRATIO   12.60000   22.0000   18.455534   19.05000    2.162805  0.117190   \n",
+       "11        B    0.32000  396.9000  356.674032  391.44000   91.204607  0.255709   \n",
+       "12    LSTAT    1.73000   37.9700   12.653063   11.36000    7.134002  0.563816   \n",
+       "13     MEDV    5.00000   50.0000   22.532806   21.20000    9.188012  0.407762   \n",
+       "\n",
+       "           p1          p5         p25         p75        p95        p99  \n",
+       "0     0.01361    0.027910    0.082045    3.677083   15.78915   41.37033  \n",
+       "1     0.00000    0.000000    0.000000   12.500000   80.00000   90.00000  \n",
+       "2     1.25350    2.180000    5.190000   18.100000   21.89000   25.65000  \n",
+       "3     0.00000    0.000000    0.000000    0.000000    1.00000    1.00000  \n",
+       "4     0.39800    0.409250    0.449000    0.624000    0.74000    0.87100  \n",
+       "5     4.52445    5.314000    5.885500    6.623500    7.58750    8.33500  \n",
+       "6     6.61000   17.725000   45.025000   94.075000  100.00000  100.00000  \n",
+       "7     1.20654    1.461975    2.100175    5.188425    7.82780    9.22277  \n",
+       "8     1.00000    2.000000    4.000000   24.000000   24.00000   24.00000  \n",
+       "9   188.00000  222.000000  279.000000  666.000000  666.00000  666.00000  \n",
+       "10   13.00000   14.700000   17.400000   20.200000   21.00000   21.20000  \n",
+       "11    6.73000   84.590000  375.377500  396.225000  396.90000  396.90000  \n",
+       "12    2.88300    3.707500    6.950000   16.955000   26.80750   33.91850  \n",
+       "13    7.01000   10.200000   17.025000   25.000000   43.40000   50.00000  "
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dd = df.copy()\n",
+    "\n",
+    "def get_metrics(df):\n",
+    "    dmetrics = pd.DataFrame([])\n",
+    "    \n",
+    "    metrics = {\n",
+    "        'min': np.min,\n",
+    "        'max': np.max,\n",
+    "        'mean': np.mean,\n",
+    "        'median': np.median,\n",
+    "        'std': np.std}    \n",
+    "       \n",
+    "    for metric in metrics.keys():\n",
+    "        df_temp = pd.DataFrame(df.apply(metrics[metric])).T\n",
+    "        dmetrics = pd.concat([dmetrics, df_temp])\n",
+    "   \n",
+    "    dmetrics = dmetrics.T\n",
+    "    dmetrics.columns = metrics\n",
+    "    dmetrics['cv'] = dmetrics.apply(lambda x: x['std'] / x['mean'], axis=1)\n",
+    "    \n",
+    "    columns = ['attr', 'min', 'max', 'mean', 'median', 'std', 'cv']\n",
+    "    dmetrics = dmetrics.reset_index()\n",
+    "    dmetrics.columns = columns\n",
+    "    \n",
+    "    return dmetrics\n",
+    "\n",
+    "def get_percentile(df):    \n",
+    "    qlist = [.01, .05, .25, .75, .95, .99]\n",
+    "    dpercentile = df.apply(lambda x: np.quantile(x, q=qlist)).T.reset_index()\n",
+    "    \n",
+    "    columns = ['attr', 'p1', 'p5', 'p25', 'p75', 'p95', 'p99']\n",
+    "    dpercentile.columns = columns\n",
+    "    \n",
+    "    return dpercentile\n",
+    "\n",
+    "dmetrics = get_metrics(dd)\n",
+    "dpercentile = get_percentile(dd)\n",
+    "pd.merge(dmetrics, dpercentile, on='attr')"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "9f565e12",
    "metadata": {},
@@ -1134,7 +1485,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 22,
    "id": "97427639",
    "metadata": {},
    "outputs": [
@@ -1197,7 +1548,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 23,
    "id": "c29233ec",
    "metadata": {},
    "outputs": [
@@ -1274,7 +1625,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 24,
    "id": "7b5ec27e",
    "metadata": {},
    "outputs": [],
@@ -1298,7 +1649,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 25,
    "id": "61477021",
    "metadata": {},
    "outputs": [
